new GET Product API

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -5,3 +5,4 @@ swagger.onboarding.institutions.api.description=Institution operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.model.id=Institution's unique identifier (i.e.: IPA code)
 swagger.onboarding.products.model.id=Product's unique identifier
+swagger.onboarding.product.model.id=Product id
