new GET Product API

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -2,7 +2,10 @@ swagger.description=Self Care OnBoarding API documentation
 swagger.security.schema.bearer.description=A bearer token in the format of a JWS and conformed to the specifications included in [RFC8725](https://tools.ietf.org/html/RFC8725)
 swagger.onboarding.model.userRole=Logged user's role
 swagger.onboarding.institutions.api.description=Institution operations
+swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.model.id=Institution's unique identifier (i.e.: IPA code)
 swagger.onboarding.products.model.id=Product's unique identifier
 swagger.onboarding.product.model.id=Product id
+swagger.onboarding.product.model.title=Product's title
+swagger.onboarding.operation.getProduct=Service that returns the information for a single product given its product id
