add getInstitutions and subProduct subscription

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -5,7 +5,18 @@ swagger.onboarding.institutions.api.description=Institution operations
 swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.model.id=Institution's unique identifier (i.e.: IPA code)
+swagger.onboarding.institutions.model.name=Institution's legal name
+swagger.onboarding.institutions.model.users=List of onboarding users
+swagger.onboarding.institutions.model.billingData=Institution's billing informations
 swagger.onboarding.products.model.id=Product's unique identifier
 swagger.onboarding.product.model.id=Product id
 swagger.onboarding.product.model.title=Product's title
-swagger.onboarding.operation.getProduct=Service that returns the information for a single product given its product id
+swagger.onboarding.product.model.parentId=Product's parent's Id
+swagger.onboarding.user.model.surname=User's surname
+swagger.onboarding.user.model.name=User's name
+swagger.onboarding.user.model.birthDate=User's birth date
+swagger.onboarding.user.model.email=User's email
+swagger.onboarding.user.model.institutionalEmail=User's institutional email
+swagger.onboarding.user.model.role=User's role
+swagger.onboarding.user.model.productRole=User's role in product
+swagger.onboarding.user.model.fiscalCode=User's fiscal code
