add getInstitutionOnboarding informations API

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -4,10 +4,14 @@ swagger.onboarding.model.userRole=Logged user's role
 swagger.onboarding.institutions.api.description=Institution operations
 swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
+swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
+swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions
 swagger.onboarding.institutions.model.id=Institution's unique identifier (i.e.: IPA code)
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
 swagger.onboarding.institutions.model.billingData=Institution's billing informations
+swagger.onboarding.institutions.model.organizationType=Institution's type
+swagger.onboarding.institutions.model.institution=Institution's informations
 swagger.onboarding.products.model.id=Product's unique identifier
 swagger.onboarding.product.model.id=Product id
 swagger.onboarding.product.model.title=Product's title
@@ -20,3 +24,4 @@ swagger.onboarding.user.model.institutionalEmail=User's institutional email
 swagger.onboarding.user.model.role=User's role
 swagger.onboarding.user.model.productRole=User's role in product
 swagger.onboarding.user.model.fiscalCode=User's fiscal code
+swagger.onboarding.user.model.manager=Institution Manager's informations
