add InstitutionOnboarding data api and models

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -9,9 +9,14 @@ swagger.onboarding.institutions.api.getInstitutions=The service retrieves all th
 swagger.onboarding.institutions.model.id=Institution's unique identifier (i.e.: IPA code)
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
+swagger.onboarding.institutions.model.institutionId=Institution's unique Id
+swagger.onboarding.institutions.model.address=Institution's physical address
+swagger.onboarding.institutions.model.digitalAddress=Institution's digitalAddress
+swagger.onboarding.institutions.model.zipCode=Institution's zipCode
+swagger.onboarding.institutions.model.taxCode=Institution's taxCode
 swagger.onboarding.institutions.model.billingData=Institution's billing informations
 swagger.onboarding.institutions.model.organizationType=Institution's type
-swagger.onboarding.institutions.model.institution=Institution's informations
+swagger.onboarding.institutions.model.institutionData=Institution's billing and type informations
 swagger.onboarding.products.model.id=Product's unique identifier
 swagger.onboarding.product.model.id=Product id
 swagger.onboarding.product.model.title=Product's title
