--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -17,6 +17,9 @@ swagger.onboarding.institutions.model.taxCode=Institution's taxCode
 swagger.onboarding.institutions.model.billingData=Institution's billing informations
 swagger.onboarding.institutions.model.organizationType=Institution's type
 swagger.onboarding.institutions.model.institutionData=Institution's billing and type informations
+swagger.onboarding.institutions.model.recipientCode=Billing recipient code
+swagger.onboarding.institutions.model.vatNumber=Institution's VAT number
+swagger.onboarding.institutions.model.publicService=Institution's service type
 swagger.onboarding.products.model.id=Product's unique identifier
 swagger.onboarding.product.model.id=Product id
 swagger.onboarding.product.model.title=Product's title
