--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -20,6 +20,9 @@ swagger.onboarding.institutions.model.institutionData=Institution's billing and 
 swagger.onboarding.institutions.model.recipientCode=Billing recipient code
 swagger.onboarding.institutions.model.vatNumber=Institution's VAT number
 swagger.onboarding.institutions.model.publicService=Institution's service type
+swagger.onboarding.institutions.model.pricingPlan=Product's pricing plan
+swagger.onboarding.institutions.model.origin=Institution data origin
+swagger.onboarding.institutions.model.institutionType=Institution's type
 swagger.onboarding.products.model.id=Product's unique identifier
 swagger.onboarding.product.model.id=Product id
 swagger.onboarding.product.model.title=Product's title
