--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -6,10 +6,10 @@ swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions
-swagger.onboarding.institutions.model.id=Institution's unique identifier (i.e.: IPA code)
+swagger.onboarding.institutions.model.id=Institution's unique internal Id 
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
-swagger.onboarding.institutions.model.institutionId=Institution's unique Id
+swagger.onboarding.institutions.model.externalId=Institution's unique external Id(i.ee: IPA code)
 swagger.onboarding.institutions.model.address=Institution's physical address
 swagger.onboarding.institutions.model.digitalAddress=Institution's digitalAddress
 swagger.onboarding.institutions.model.zipCode=Institution's zipCode
