--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -4,8 +4,35 @@ swagger.onboarding.model.userRole=Logged user's role
 swagger.onboarding.institutions.api.description=Institution operations
 swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
+swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
+swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions
 swagger.onboarding.institutions.model.id=Institution's unique identifier (i.e.: IPA code)
+swagger.onboarding.institutions.model.name=Institution's legal name
+swagger.onboarding.institutions.model.users=List of onboarding users
+swagger.onboarding.institutions.model.institutionId=Institution's unique Id
+swagger.onboarding.institutions.model.address=Institution's physical address
+swagger.onboarding.institutions.model.digitalAddress=Institution's digitalAddress
+swagger.onboarding.institutions.model.zipCode=Institution's zipCode
+swagger.onboarding.institutions.model.taxCode=Institution's taxCode
+swagger.onboarding.institutions.model.billingData=Institution's billing informations
+swagger.onboarding.institutions.model.organizationType=Institution's type
+swagger.onboarding.institutions.model.institutionData=Institution's billing and type informations
+swagger.onboarding.institutions.model.recipientCode=Billing recipient code
+swagger.onboarding.institutions.model.vatNumber=Institution's VAT number
+swagger.onboarding.institutions.model.publicServices=Institution's service type
+swagger.onboarding.institutions.model.pricingPlan=Product's pricing plan
+swagger.onboarding.institutions.model.origin=Institution data origin
+swagger.onboarding.institutions.model.institutionType=Institution's type
 swagger.onboarding.products.model.id=Product's unique identifier
 swagger.onboarding.product.model.id=Product id
 swagger.onboarding.product.model.title=Product's title
-swagger.onboarding.operation.getProduct=Service that returns the information for a single product given its product id
+swagger.onboarding.product.model.parentId=Product's parent's Id
+swagger.onboarding.user.model.surname=User's surname
+swagger.onboarding.user.model.name=User's name
+swagger.onboarding.user.model.birthDate=User's birth date
+swagger.onboarding.user.model.email=User's email
+swagger.onboarding.user.model.institutionalEmail=User's institutional email
+swagger.onboarding.user.model.role=User's role
+swagger.onboarding.user.model.productRole=User's role in product
+swagger.onboarding.user.model.fiscalCode=User's fiscal code
+swagger.onboarding.user.model.manager=Institution Manager's informations
