--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -16,6 +16,7 @@ swagger.onboarding.institutions.model.zipCode=Institution's zipCode
 swagger.onboarding.institutions.model.taxCode=Institution's taxCode
 swagger.onboarding.institutions.model.billingData=Institution's billing informations
 swagger.onboarding.institutions.model.organizationType=Institution's type
+swagger.onboarding.institutions.model.originId=Institution's details origin Id
 swagger.onboarding.institutions.model.institutionData=Institution's billing and type informations
 swagger.onboarding.institutions.model.recipientCode=Billing recipient code
 swagger.onboarding.institutions.model.vatNumber=Institution's VAT number
