--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -6,6 +6,7 @@ swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions
+swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.model.id=Institution's unique internal Id 
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
@@ -24,10 +25,11 @@ swagger.onboarding.institutions.model.publicServices=Institution's service type
 swagger.onboarding.institutions.model.pricingPlan=Product's pricing plan
 swagger.onboarding.institutions.model.origin=Institution data origin
 swagger.onboarding.institutions.model.institutionType=Institution's type
-swagger.onboarding.products.model.id=Product's unique identifier
-swagger.onboarding.product.model.id=Product id
+swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
+swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
 swagger.onboarding.product.model.parentId=Product's parent's Id
+swagger.onboarding.user.model.id=User's unique identifier
 swagger.onboarding.user.model.surname=User's surname
 swagger.onboarding.user.model.name=User's name
 swagger.onboarding.user.model.birthDate=User's birth date
@@ -37,3 +39,6 @@ swagger.onboarding.user.model.role=User's role
 swagger.onboarding.user.model.productRole=User's role in product
 swagger.onboarding.user.model.fiscalCode=User's fiscal code
 swagger.onboarding.user.model.manager=Institution Manager's informations
+swagger.onboarding.user.model.status=User's status
+swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
+swagger.model.certifiedField.value=Field value
