--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -7,7 +7,7 @@ swagger.onboarding.institutions.api.onboarding=The service allows the onboarding
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
-swagger.onboarding.institutions.model.id=Institution's unique internal Id 
+swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
 swagger.onboarding.institutions.model.externalId=Institution's unique external Id(i.ee: IPA code)
@@ -29,6 +29,7 @@ swagger.onboarding.product.api.getProduct=The service retrieves the product give
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
 swagger.onboarding.product.model.parentId=Product's parent's Id
+swagger.onboarding.user.api.validate=Check if requested user data are valid
 swagger.onboarding.user.model.id=User's unique identifier
 swagger.onboarding.user.model.surname=User's surname
 swagger.onboarding.user.model.name=User's name
