--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -5,7 +5,7 @@ swagger.onboarding.institutions.api.description=Institution operations
 swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
-swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions
+swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
@@ -25,6 +25,7 @@ swagger.onboarding.institutions.model.publicServices=Institution's service type
 swagger.onboarding.institutions.model.pricingPlan=Product's pricing plan
 swagger.onboarding.institutions.model.origin=Institution data origin
 swagger.onboarding.institutions.model.institutionType=Institution's type
+swagger.onboarding.institutions.model.userRole=Logged user's role
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
