add onboarding psp fields (missing party integration)

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -11,15 +11,15 @@ swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified ins
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
-swagger.onboarding.institutions.model.externalId=Institution's unique external Id(i.ee: IPA code)
+swagger.onboarding.institutions.model.externalId=Institution's unique external identifier
 swagger.onboarding.institutions.model.address=Institution's physical address
 swagger.onboarding.institutions.model.digitalAddress=Institution's digitalAddress
 swagger.onboarding.institutions.model.zipCode=Institution's zipCode
 swagger.onboarding.institutions.model.taxCode=Institution's taxCode
-swagger.onboarding.institutions.model.billingData=Institution's billing informations
+swagger.onboarding.institutions.model.billingData=Institution's billing information
 swagger.onboarding.institutions.model.organizationType=Institution's type
 swagger.onboarding.institutions.model.originId=Institution's details origin Id
-swagger.onboarding.institutions.model.institutionData=Institution's billing and type informations
+swagger.onboarding.institutions.model.institutionData=Institution's billing and type information
 swagger.onboarding.institutions.model.recipientCode=Billing recipient code
 swagger.onboarding.institutions.model.vatNumber=Institution's VAT number
 swagger.onboarding.institutions.model.publicServices=Institution's service type
@@ -27,6 +27,16 @@ swagger.onboarding.institutions.model.pricingPlan=Product's pricing plan
 swagger.onboarding.institutions.model.origin=Institution data origin
 swagger.onboarding.institutions.model.institutionType=Institution's type
 swagger.onboarding.institutions.model.userRole=Logged user's role
+swagger.onboarding.institutions.model.pspData=Payment Service Provider (PSP) specific data
+swagger.onboarding.institutions.model.pspData.businessRegisterNumber=PSP's Business Register number
+swagger.onboarding.institutions.model.pspData.legalRegisterName=PSP's legal register name
+swagger.onboarding.institutions.model.pspData.legalRegisterNumber=PSP's legal register number
+swagger.onboarding.institutions.model.pspData.abiCode=PSP's ABI code
+swagger.onboarding.institutions.model.pspData.vatNumberGroup=PSP's Vat Number group
+swagger.onboarding.institutions.model.pspData.dpoData=Data Protection Officer (DPO) specific data
+swagger.onboarding.institutions.model.pspData.dpoData.address=DPO's address
+swagger.onboarding.institutions.model.pspData.dpoData.pec=DPO's PEC
+swagger.onboarding.institutions.model.pspData.dpoData.email=DPO's email
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
