Modified API to retrieve a product in the onboarding phase, the API now also displays the "status" field

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -41,6 +41,7 @@ swagger.onboarding.product.api.getProduct=The service retrieves the product give
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
 swagger.onboarding.product.model.parentId=Product's parent's Id
+swagger.onboarding.product.model.status=Product's status
 swagger.onboarding.user.api.validate=Check if requested user data are valid
 swagger.onboarding.user.model.id=User's unique identifier
 swagger.onboarding.user.model.surname=User's surname
