Modified API to onboard an institution to a product, the API now also retrieves the geographic taxonomy of the onboarding institution and passes it to the BE.

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -11,6 +11,7 @@ swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified ins
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
+swagger.onboarding.institutions.model.geographicTaxonomies=List of geographic Taxonomies
 swagger.onboarding.institutions.model.externalId=Institution's unique external identifier
 swagger.onboarding.institutions.model.address=Institution's physical address
 swagger.onboarding.institutions.model.digitalAddress=Institution's digitalAddress
@@ -54,5 +55,7 @@ swagger.onboarding.user.model.productRole=User's role in product
 swagger.onboarding.user.model.fiscalCode=User's fiscal code
 swagger.onboarding.user.model.manager=Institution Manager's informations
 swagger.onboarding.user.model.status=User's status
+swagger.onboarding.geographicTaxonomy.model.code=Institution's geographic taxonomy ISTAT code
+swagger.onboarding.geographicTaxonomy.model.desc=Institution's geographic taxonomy extended name
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
 swagger.model.certifiedField.value=Field value
