Implemented InfoCamere integration in order to retrieve the Institution PNPG List for a given Legal Representative, by his userId (converted to TaxId by using PDV) + mocked BE response using APIM + Junit Test for Controller, Service and Resources

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -2,6 +2,7 @@ swagger.description=Self Care OnBoarding API documentation
 swagger.security.schema.bearer.description=A bearer token in the format of a JWS and conformed to the specifications included in [RFC8725](https://tools.ietf.org/html/RFC8725)
 swagger.onboarding.model.userRole=Logged user's role
 swagger.onboarding.institutions.api.description=Institution operations
+swagger.onboarding.pnPGInstitutions.api.description=PN PG Institution operations
 swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
@@ -9,6 +10,7 @@ swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
+swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUserId=Get Legal Representative's PN PG institution List
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
@@ -59,5 +61,11 @@ swagger.onboarding.user.model.manager=Institution Manager's informations
 swagger.onboarding.user.model.status=User's status
 swagger.onboarding.geographicTaxonomy.model.code=Institution's geographic taxonomy ISTAT code
 swagger.onboarding.geographicTaxonomy.model.desc=Institution's geographic taxonomy extended name
+swagger.onboarding.pnPGInstitutions.model.userId=Logged user's uid
+swagger.onboarding.pnPGInstitutions.model.legalTaxId=Legal Representative's tax ID
+swagger.onboarding.pnPGInstitutions.model.requestDateTime=Timestamp request institutions PNPG list
+swagger.onboarding.pnPGInstitutions.model.businesses=Legal Representative's institutions list
+swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessName=Legal Representative's institutions name
+swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessTaxId=Legal Representative's institutions tax ID
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
 swagger.model.certifiedField.value=Field value
