--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -10,6 +10,7 @@ swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
+swagger.onboarding.pnPGInstitutions.api.onboarding=The service allows the onboarding of Users to a PN PG Institution
 swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUserId=Get Legal Representative's PN PG institution List
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
@@ -65,6 +66,7 @@ swagger.onboarding.pnPGInstitutions.model.userId=Logged user's uid
 swagger.onboarding.pnPGInstitutions.model.legalTaxId=Legal Representative's tax ID
 swagger.onboarding.pnPGInstitutions.model.requestDateTime=Timestamp request institutions PNPG list
 swagger.onboarding.pnPGInstitutions.model.businesses=Legal Representative's institutions list
+swagger.onboarding.pnPGInstitutions.model.externalId=PG Institution's unique external identifier
 swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessName=Legal Representative's institutions name
 swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessTaxId=Legal Representative's institutions tax ID
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
