--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -12,6 +12,7 @@ swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
 swagger.onboarding.pnPGInstitutions.api.onboarding=The service allows the onboarding of Users to a PN PG Institution
 swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
+swagger.onboarding.pnPGInstitutions.api.matchInstitutionAndUserMatch Legal Representative and inserted Institution by querying on Agenzia delle Entrate
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
@@ -71,6 +72,7 @@ swagger.onboarding.geographicTaxonomy.model.code=Institution's geographic taxono
 swagger.onboarding.geographicTaxonomy.model.desc=Institution's geographic taxonomy extended name
 swagger.onboarding.pnPGInstitutions.model.userId=Logged user's uid
 swagger.onboarding.pnPGInstitutions.model.legalTaxId=Legal Representative's tax ID
+swagger.onboarding.pnPGInstitutions.model.matchResult=Legal Representative and Institution match result on Agenzia delle Entrate
 swagger.onboarding.pnPGInstitutions.model.requestDateTime=Timestamp request institutions PNPG list
 swagger.onboarding.pnPGInstitutions.model.businesses=Legal Representative's institutions list
 swagger.onboarding.pnPGInstitutions.model.externalId=PG Institution's unique external identifier
