Implemented ms to retrieve logged LR's Institution Legal Address by  his tax code

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -12,7 +12,8 @@ swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
 swagger.onboarding.pnPGInstitutions.api.onboarding=The service allows the onboarding of Users to a PN PG Institution
 swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
-swagger.onboarding.pnPGInstitutions.api.matchInstitutionAndUserMatch Legal Representative and inserted Institution by querying on Agenzia delle Entrate
+swagger.onboarding.pnPGInstitutions.api.matchInstitutionAndUser=MatchLegal Representative and inserted Institution by querying on Agenzia delle Entrate
+swagger.onboarding.pnPGInstitutions.api.getInstitutionLegalAddress=Get legal address by business tax id
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
 swagger.onboarding.institutions.model.users=List of onboarding users
@@ -78,5 +79,7 @@ swagger.onboarding.pnPGInstitutions.model.businesses=Legal Representative's inst
 swagger.onboarding.pnPGInstitutions.model.externalId=PG Institution's unique external identifier
 swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessName=Legal Representative's institutions name
 swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessTaxId=Legal Representative's institutions tax ID
+swagger.onboarding.pnPGInstitutions.model.address=Legal Representative's institution legal address
+swagger.onboarding.pnPGInstitutions.model.zipCode=Legal Representative's institution legal address zip code
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
 swagger.model.certifiedField.value=Field value
