--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -81,5 +81,6 @@ swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessName=Legal Repres
 swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessTaxId=Legal Representative's institutions tax ID
 swagger.onboarding.pnPGInstitutions.model.address=Legal Representative's institution legal address
 swagger.onboarding.pnPGInstitutions.model.zipCode=Legal Representative's institution legal address zip code
+swagger.onboarding.pnPGInstitutions.model.certified=Indicates whether the institution values come from INFOCAMERE (true) or MANUAL (false)
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
 swagger.model.certifiedField.value=Field value
