--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -52,6 +52,7 @@ swagger.onboarding.institutions.model.companyInformations.shareCapital=Instituti
 swagger.onboarding.institutions.model.companyInformations.businessRegisterPlace=Institution's business register place
 swagger.onboarding.institutions.model.assistance.supportEmail=Institution's support email contact
 swagger.onboarding.institutions.model.assistance.supportPhone=Institution's support phone contact
+swagger.onboarding.institutions.model.productFilter=A list of products to filter the institutions based on whether the institution has an ACTIVE onboarding on the specified products
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
