--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -12,7 +12,9 @@ swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
 swagger.onboarding.pnPGInstitutions.api.onboarding=The service allows the onboarding of Users to a PN PG Institution
 swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
+swagger.onboarding.institutions.api.matchInstitutionAndUser=MatchLegal Representative and inserted Institution by querying on Agenzia delle Entrate
 swagger.onboarding.pnPGInstitutions.api.matchInstitutionAndUser=MatchLegal Representative and inserted Institution by querying on Agenzia delle Entrate
+swagger.onboarding.institutions.api.getInstitutionLegalAddress=Get legal address by business tax id
 swagger.onboarding.pnPGInstitutions.api.getInstitutionLegalAddress=Get legal address by business tax id
 swagger.onboarding.institutions.model.id=Institution's unique internal Id
 swagger.onboarding.institutions.model.name=Institution's legal name
@@ -74,14 +76,12 @@ swagger.onboarding.geographicTaxonomy.model.code=Institution's geographic taxono
 swagger.onboarding.geographicTaxonomy.model.desc=Institution's geographic taxonomy extended name
 swagger.onboarding.pnPGInstitutions.model.userId=Logged user's uid
 swagger.onboarding.pnPGInstitutions.model.legalTaxId=Legal Representative's tax ID
-swagger.onboarding.pnPGInstitutions.model.matchResult=Legal Representative and Institution match result on Agenzia delle Entrate
+swagger.onboarding.institutions.model.matchResult=Legal Representative and Institution match result on Agenzia delle Entrate
 swagger.onboarding.pnPGInstitutions.model.requestDateTime=Timestamp request institutions PNPG list
 swagger.onboarding.pnPGInstitutions.model.businesses=Legal Representative's institutions list
 swagger.onboarding.pnPGInstitutions.model.externalId=PG Institution's unique external identifier
 swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessName=Legal Representative's institutions name
 swagger.onboarding.pnPGInstitutions.businessPnpg.model.businessTaxId=Legal Representative's institutions tax ID
-swagger.onboarding.pnPGInstitutions.model.address=Legal Representative's institution legal address
-swagger.onboarding.pnPGInstitutions.model.zipCode=Legal Representative's institution legal address zip code
 swagger.onboarding.pnPGInstitutions.model.certified=Indicates whether the institution values come from INFOCAMERE (true) or MANUAL (false)
 swagger.onboarding.pnPGInstitutions.model.digitalAddress=Institution's email address
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
