--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -5,6 +5,7 @@ swagger.onboarding.institutions.api.description=Institution operations
 swagger.onboarding.pnPGInstitutions.api.description=PN PG Institution operations
 swagger.onboarding.product.api.description=Product operations
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
+swagger.onboarding.institutions.api.onboarding.subunit=The service allows the onboarding of Users to a subunit of an Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service retrieve the institution's geographic taxonomy
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
@@ -27,6 +28,8 @@ swagger.onboarding.institutions.model.address=Institution's physical address
 swagger.onboarding.institutions.model.digitalAddress=Institution's digitalAddress
 swagger.onboarding.institutions.model.zipCode=Institution's zipCode
 swagger.onboarding.institutions.model.taxCode=Institution's taxCode
+swagger.onboarding.institutions.model.subunitCode=Institution's subunitCode
+swagger.onboarding.institutions.model.subunitType=Institution's subunitType
 swagger.onboarding.institutions.model.billingData=Institution's billing information
 swagger.onboarding.institutions.model.organizationType=Institution's type
 swagger.onboarding.institutions.model.originId=Institution's details origin Id
