feat(api): added proxy to core endpoint for tokens complete onboarding

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -88,3 +88,7 @@ swagger.onboarding.institutions.businessIc.model.businessTaxId=Legal Representat
 swagger.onboarding.institutions.model.certified=Indicates whether the institution values come from INFOCAMERE (true) or MANUAL (false)
 swagger.model.certifiedField.certified=Indicates whether the value comes from a certified information source
 swagger.model.certifiedField.value=Field value
+
+swagger.tokens.verify=Verify if the token is already consumed
+swagger.tokens.complete=Complete an onboarding request
+swagger.tokens.tokenId=Contract's unique identifier
