update open api

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -11,6 +11,7 @@ swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
+swagger.onboarding.institutions.api.checkOrganization=Checks if an institution has been already registered on the products backoffice
 swagger.onboarding.pnPGInstitutions.api.onboarding=The service allows the onboarding of Users to a PN PG Institution
 swagger.onboarding.institutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
 swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
