--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -11,6 +11,7 @@ swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
+swagger.onboarding.institutions.api.checkOrganization=Checks if an institution has been already registered on the products backoffice
 swagger.onboarding.pnPGInstitutions.api.onboarding=The service allows the onboarding of Users to a PN PG Institution
 swagger.onboarding.institutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
 swagger.onboarding.pnPGInstitutions.api.getInstitutionsByUser=Get Legal Representative's PN PG institution List
@@ -59,7 +60,8 @@ swagger.onboarding.institutions.model.companyInformations.shareCapital=Instituti
 swagger.onboarding.institutions.model.companyInformations.businessRegisterPlace=Institution's business register place
 swagger.onboarding.institutions.model.assistance.supportEmail=Institution's support email contact
 swagger.onboarding.institutions.model.assistance.supportPhone=Institution's support phone contact
-swagger.onboarding.institutions.model.productFilter=A product to filter the institutions based on whether the institution has an ACTIVE onboarding on the specified product. 
+swagger.onboarding.institutions.model.productFilter=A product to filter the institutions based on whether the institution has an ACTIVE onboarding on the specified product.
+swagger.onboarding.institutions.model.verifyType=Onboarding verification method type
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
