fix: removed required from field recipientCode

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -35,7 +35,7 @@ swagger.onboarding.institutions.model.billingData=Institution's billing informat
 swagger.onboarding.institutions.model.organizationType=Institution's type
 swagger.onboarding.institutions.model.originId=Institution's details origin Id
 swagger.onboarding.institutions.model.institutionData=Institution's billing and type information
-swagger.onboarding.institutions.model.recipientCode=Billing recipient code
+swagger.onboarding.institutions.model.recipientCode=Billing recipient code, not required only for institutionType SA
 swagger.onboarding.institutions.model.vatNumber=Institution's VAT number
 swagger.onboarding.institutions.model.publicServices=Institution's service type
 swagger.onboarding.institutions.model.pricingPlan=Product's pricing plan
