add institution location informations to onboardingDto model

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -43,6 +43,9 @@ swagger.onboarding.institutions.model.origin=Institution data origin
 swagger.onboarding.institutions.model.institutionType=Institution's type
 swagger.onboarding.institutions.model.userRole=Logged user's role
 swagger.onboarding.institutions.model.pspData=Payment Service Provider (PSP) specific data
+swagger.onboarding.institutions.model.city=Institution's city
+swagger.onboarding.institutions.model.county=Institution's county
+swagger.onboarding.institutions.model.country=Institution's country
 swagger.onboarding.institutions.model.companyInformations=GPS, SCP, PT optional data
 swagger.onboarding.institutions.model.assistance=Institution's assistance contacts
 swagger.onboarding.institutions.model.pspData.businessRegisterNumber=PSP's Business Register number
