[Selc-3328] feat: add city, county and country to onboardingDto model (#187)
* add institution location informations to onboardingDto model

* updated openApi

* add city, county and country to onboardingRequest object

* add tests

* fix tests

* add null check for location info on InstitutionSeed

* add tests

* missing mapping of city, county and country in onboarding request to core

* check null on location in onboarding data

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -43,6 +43,9 @@ swagger.onboarding.institutions.model.origin=Institution data origin
 swagger.onboarding.institutions.model.institutionType=Institution's type
 swagger.onboarding.institutions.model.userRole=Logged user's role
 swagger.onboarding.institutions.model.pspData=Payment Service Provider (PSP) specific data
+swagger.onboarding.institutions.model.city=Institution's city
+swagger.onboarding.institutions.model.county=Institution's county
+swagger.onboarding.institutions.model.country=Institution's country
 swagger.onboarding.institutions.model.companyInformations=GPS, SCP, PT optional data
 swagger.onboarding.institutions.model.assistance=Institution's assistance contacts
 swagger.onboarding.institutions.model.pspData.businessRegisterNumber=PSP's Business Register number
@@ -62,6 +65,7 @@ swagger.onboarding.institutions.model.assistance.supportEmail=Institution's supp
 swagger.onboarding.institutions.model.assistance.supportPhone=Institution's support phone contact
 swagger.onboarding.institutions.model.productFilter=A product to filter the institutions based on whether the institution has an ACTIVE onboarding on the specified product.
 swagger.onboarding.institutions.model.verifyType=Onboarding verification method type
+swagger.onboarding.institution.model.locationData=Institution's location data, city, county, country information
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
