get onboarding for approve

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -71,6 +71,10 @@ swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
 swagger.onboarding.product.model.parentId=Product's parent's Id
 swagger.onboarding.product.model.status=Product's status
+swagger.onboarding.model.status=Onboarding request's status
+swagger.onboarding.model.institutionInfo=Institution specific data
+swagger.onboarding.model.manager=Manager specific data. It's required when institutionType is not PT
+swagger.onboarding.model.admins=Administrators specific data
 swagger.onboarding.user.api.validate=Check if requested user data are valid
 swagger.onboarding.user.model.id=User's unique identifier
 swagger.onboarding.user.model.surname=User's surname
@@ -99,3 +103,12 @@ swagger.model.certifiedField.value=Field value
 swagger.tokens.verify=Verify if the token is already consumed
 swagger.tokens.complete=Complete an onboarding request
 swagger.tokens.tokenId=Contract's unique identifier
+swagger.tokens.onboardingId=Onboarding's unique identifier
+
+swagger.tokens.retrieveOnboardingRequest=Service to retrieve a specific onboarding request
+
+
+swagger.onboarding.institutions.model.dpoData=Data Protection Officer (DPO) specific data
+swagger.onboarding.institutions.model.dpoData.address=DPO's address
+swagger.onboarding.institutions.model.dpoData.pec=DPO's PEC
+swagger.onboarding.institutions.model.dpoData.email=DPO's email
