fix: fix swagger

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -114,7 +114,7 @@ swagger.onboarding.institutions.model.dpoData.pec=DPO's PEC
 swagger.onboarding.institutions.model.dpoData.email=DPO's email
 
 swagger.onboarding.institutions.model.additionalInformations=GSP institution's additional informations
-swagger.onboarding.institutions.model.assistance.belongRegulatedMarket= he institution belongs to a regulated market
+swagger.onboarding.institutions.model.assistance.belongRegulatedMarket= The institution belongs to a regulated market
 swagger.onboarding.institutions.model.assistance.regulatedMarketNote=regulatedMarket Note
 swagger.onboarding.institutions.model.assistance.isIpa=The institution is registered on IPA
 swagger.onboarding.institutions.model.assistance.ipaCode=IPA code
