--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -106,7 +106,8 @@ swagger.tokens.tokenId=Contract's unique identifier
 swagger.tokens.onboardingId=Onboarding's unique identifier
 
 swagger.tokens.retrieveOnboardingRequest=Service to retrieve a specific onboarding request
-
+swagger.tokens.approveOnboardingRequest=Service to approve a specific onboarding request
+swagger.tokens.rejectOnboardingRequest=Service to reject a specific onboarding request
 
 swagger.onboarding.institutions.model.dpoData=Data Protection Officer (DPO) specific data
 swagger.onboarding.institutions.model.dpoData.address=DPO's address
