--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -117,11 +117,11 @@ swagger.onboarding.institutions.model.dpoData.email=DPO's email
 swagger.onboarding.institutions.model.additionalInformations=GSP institution's additional informations
 swagger.onboarding.institutions.model.assistance.belongRegulatedMarket= The institution belongs to a regulated market
 swagger.onboarding.institutions.model.assistance.regulatedMarketNote=regulatedMarket Note
-swagger.onboarding.institutions.model.assistance.isIpa=The institution is registered on IPA
+swagger.onboarding.institutions.model.assistance.ipa=The institution is registered on IPA
 swagger.onboarding.institutions.model.assistance.ipaCode=IPA code
 swagger.onboarding.institutions.model.assistance.establishedByRegulatoryProvision=The institution is a company established by a regulatory provision
 swagger.onboarding.institutions.model.assistance.establishedByRegulatoryProvisionNote=establishedByRegulatoryProvision Note
-swagger.onboarding.institutions.model.assistance.isAgentOfPublicService=The institution is an agent of a public service
+swagger.onboarding.institutions.model.assistance.agentOfPublicService=The institution is an agent of a public service
 swagger.onboarding.institutions.model.assistance.agentOfPublicServiceNote=agentOfPublicService Note
 swagger.onboarding.institutions.model.assistance.otherNote=Other note
 
