feat: added new AdditionalInformations Object for API V2

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -125,3 +125,14 @@ swagger.onboarding.institutions.model.assistance.agentOfPublicService=The instit
 swagger.onboarding.institutions.model.assistance.agentOfPublicServiceNote=agentOfPublicService Note
 swagger.onboarding.institutions.model.assistance.otherNote=Other note
 
+swagger.onboarding.institutions.model.additionalInformations.belongRegulatedMarket=The institution belongs to a regulated market
+swagger.onboarding.institutions.model.additionalInformations.regulatedMarketNote=regulatedMarket Note
+swagger.onboarding.institutions.model.additionalInformations.ipa=The institution is registered on IPA
+swagger.onboarding.institutions.model.additionalInformations.ipaCode=IPA code
+swagger.onboarding.institutions.model.additionalInformations.establishedByRegulatoryProvision=The institution is a company established by a regulatory provision
+swagger.onboarding.institutions.model.additionalInformations.establishedByRegulatoryProvisionNote=establishedByRegulatoryProvision Note
+swagger.onboarding.institutions.model.additionalInformations.agentOfPublicService=The institution is an agent of a public service
+swagger.onboarding.institutions.model.additionalInformations.agentOfPublicServiceNote=agentOfPublicService Note
+swagger.onboarding.institutions.model.additionalInformations.otherNote=Other note
+
+
