feat: add ReasonForReject as body in reject API

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -66,6 +66,7 @@ swagger.onboarding.institutions.model.assistance.supportPhone=Institution's supp
 swagger.onboarding.institutions.model.productFilter=A product to filter the institutions based on whether the institution has an ACTIVE onboarding on the specified product.
 swagger.onboarding.institutions.model.verifyType=Onboarding verification method type
 swagger.onboarding.institution.model.locationData=Institution's location data, city, county, country information
+swagger.onboarding.institution.model.reason=Rejection reason of an onboarding request
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
