feat: add updatedAt and expiringDate fields OnboardingRequestResource response

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -75,6 +75,9 @@ swagger.onboarding.product.model.status=Product's status
 swagger.onboarding.model.status=Onboarding request's status
 swagger.onboarding.model.institutionInfo=Institution specific data
 swagger.onboarding.model.manager=Manager specific data. It's required when institutionType is not PT
+swagger.onboarding.model.reason=Onboarding request rejection reason
+swagger.onboarding.model.updateDate=Onboarding request update date
+swagger.onboarding.model.expiringDate=Onboarding request expiring date
 swagger.onboarding.model.admins=Administrators specific data
 swagger.onboarding.user.api.validate=Check if requested user data are valid
 swagger.onboarding.user.model.id=User's unique identifier
