--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -66,6 +66,7 @@ swagger.onboarding.institutions.model.assistance.supportPhone=Institution's supp
 swagger.onboarding.institutions.model.productFilter=A product to filter the institutions based on whether the institution has an ACTIVE onboarding on the specified product.
 swagger.onboarding.institutions.model.verifyType=Onboarding verification method type
 swagger.onboarding.institution.model.locationData=Institution's location data, city, county, country information
+swagger.onboarding.institution.model.reason=Rejection reason of an onboarding request
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
@@ -74,6 +75,9 @@ swagger.onboarding.product.model.status=Product's status
 swagger.onboarding.model.status=Onboarding request's status
 swagger.onboarding.model.institutionInfo=Institution specific data
 swagger.onboarding.model.manager=Manager specific data. It's required when institutionType is not PT
+swagger.onboarding.model.reason=Onboarding request rejection reason
+swagger.onboarding.model.updateDate=Onboarding request update date
+swagger.onboarding.model.expiringDate=Onboarding request expiring date
 swagger.onboarding.model.admins=Administrators specific data
 swagger.onboarding.user.api.validate=Check if requested user data are valid
 swagger.onboarding.user.model.id=User's unique identifier
