feat: add API getContract

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -112,6 +112,7 @@ swagger.tokens.onboardingId=Onboarding's unique identifier
 swagger.tokens.retrieveOnboardingRequest=Service to retrieve a specific onboarding request
 swagger.tokens.approveOnboardingRequest=Service to approve a specific onboarding request
 swagger.tokens.rejectOnboardingRequest=Service to reject a specific onboarding request
+swagger.tokens.getContract=Service to download a specific onboarding contract
 
 swagger.onboarding.institutions.model.dpoData=Data Protection Officer (DPO) specific data
 swagger.onboarding.institutions.model.dpoData.address=DPO's address
