fix: updated field from taxCodeSfe to taxCodeInvoicing

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -29,7 +29,7 @@ swagger.onboarding.institutions.model.address=Institution's physical address
 swagger.onboarding.institutions.model.digitalAddress=Institution's digitalAddress
 swagger.onboarding.institutions.model.zipCode=Institution's zipCode
 swagger.onboarding.institutions.model.taxCode=Institution's taxCode
-swagger.onboarding.institutions.model.taxCodeSfe=Institution's taxCodeSfe for electronic invoicing
+swagger.onboarding.institutions.model.taxCodeInvoicing=Institution's taxCodeInvoicing for electronic invoicing
 swagger.onboarding.institutions.model.subunitCode=Institution's subunitCode
 swagger.onboarding.institutions.model.subunitType=Institution's subunitType
 swagger.onboarding.institutions.model.billingData=Institution's billing information
