Added API to start onboarding for new users

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -81,6 +81,7 @@ swagger.onboarding.model.updateDate=Onboarding request update date
 swagger.onboarding.model.expiringDate=Onboarding request expiring date
 swagger.onboarding.model.admins=Administrators specific data
 swagger.onboarding.user.api.validate=Check if requested user data are valid
+swagger.onboarding.users.api.onboarding=The service allows the onboarding of Users
 swagger.onboarding.user.model.id=User's unique identifier
 swagger.onboarding.user.model.surname=User's surname
 swagger.onboarding.user.model.name=User's name
