--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -106,6 +106,7 @@ swagger.model.certifiedField.value=Field value
 
 swagger.tokens.verify=Verify if the token is already consumed
 swagger.tokens.complete=Complete an onboarding request
+swagger.tokens.completeOnboardingUsers=Complete an onboarding users request
 swagger.tokens.tokenId=Contract's unique identifier
 swagger.tokens.onboardingId=Onboarding's unique identifier
 
