[SELC-5075] Added isAggregator and aggregates fields in OnboardingProductDto

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -142,4 +142,7 @@ swagger.onboarding.institutions.model.additionalInformations.agentOfPublicServic
 swagger.onboarding.institutions.model.additionalInformations.agentOfPublicServiceNote=agentOfPublicService Note
 swagger.onboarding.institutions.model.additionalInformations.otherNote=Other note
 
+swagger.onboarding.institutions.model.aggregates=List of Aggregate Institutions, not empty only if isAggregator field's value is True
+swagger.onboarding.institutions.model.isAggregator=specified if given institution is an Aggregator
+
 
