Added logo property to product resource

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -73,6 +73,8 @@ swagger.onboarding.product.api.getProducts=The service retrieves all products
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
 swagger.onboarding.product.model.parentId=Product's parent's Id
+swagger.onboarding.product.model.logo=Product's logo
+swagger.onboarding.product.model.logoBgColor=Product logo's background color
 swagger.onboarding.product.model.status=Product's status
 swagger.onboarding.model.status=Onboarding request's status
 swagger.onboarding.model.institutionInfo=Institution specific data
