[SELC-4358] feat: Added endpoint to retrieve all products

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -69,9 +69,12 @@ swagger.onboarding.institutions.model.verifyType=Onboarding verification method 
 swagger.onboarding.institution.model.locationData=Institution's location data, city, county, country information
 swagger.onboarding.institution.model.reason=Rejection reason of an onboarding request
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
+swagger.onboarding.product.api.getProducts=The service retrieves all products
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
 swagger.onboarding.product.model.parentId=Product's parent's Id
+swagger.onboarding.product.model.logo=Product's logo
+swagger.onboarding.product.model.logoBgColor=Product logo's background color
 swagger.onboarding.product.model.status=Product's status
 swagger.onboarding.model.status=Onboarding request's status
 swagger.onboarding.model.institutionInfo=Institution specific data
