--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -70,6 +70,7 @@ swagger.onboarding.institution.model.locationData=Institution's location data, c
 swagger.onboarding.institution.model.reason=Rejection reason of an onboarding request
 swagger.onboarding.product.api.getProduct=The service retrieves the product given its internal id
 swagger.onboarding.product.api.getProducts=The service retrieves all products
+swagger.onboarding.product.api.getProductsAdmin=The service retrieves all products for the addition administration functionality
 swagger.onboarding.product.model.id=Product's unique identifier
 swagger.onboarding.product.model.title=Product's title
 swagger.onboarding.product.model.parentId=Product's parent's Id
