[SELC-5060] feat: Added API to check manager

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -86,6 +86,7 @@ swagger.onboarding.model.expiringDate=Onboarding request expiring date
 swagger.onboarding.model.admins=Administrators specific data
 swagger.onboarding.user.api.validate=Check if requested user data are valid
 swagger.onboarding.users.api.onboarding=The service allows the onboarding of Users
+swagger.onboarding.users.api.check-manager=Returns true if current manager and previous one are the same
 swagger.onboarding.user.model.id=User's unique identifier
 swagger.onboarding.user.model.surname=User's surname
 swagger.onboarding.user.model.name=User's name
