--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -118,6 +118,7 @@ swagger.tokens.complete=Complete an onboarding request
 swagger.tokens.completeOnboardingUsers=Complete an onboarding users request
 swagger.tokens.tokenId=Contract's unique identifier
 swagger.tokens.onboardingId=Onboarding's unique identifier
+swagger.tokens.productId=Product's unique identifier
 
 swagger.tokens.retrieveOnboardingRequest=Service to retrieve a specific onboarding request
 swagger.tokens.approveOnboardingRequest=Service to approve a specific onboarding request
