--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -124,6 +124,7 @@ swagger.tokens.retrieveOnboardingRequest=Service to retrieve a specific onboardi
 swagger.tokens.approveOnboardingRequest=Service to approve a specific onboarding request
 swagger.tokens.rejectOnboardingRequest=Service to reject a specific onboarding request
 swagger.tokens.getContract=Service to download a specific onboarding contract
+swagger.tokens.getAggregatesCsv=Service to download a specific onboarding aggregates csv
 
 swagger.onboarding.institutions.model.dpoData=Data Protection Officer (DPO) specific data
 swagger.onboarding.institutions.model.dpoData.address=DPO's address
