[PNPG-243] feat: added implementation for getActiveOnboarding API

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -4,6 +4,7 @@ swagger.onboarding.model.userRole=Logged user's role
 swagger.onboarding.institutions.api.description=Institution operations
 swagger.onboarding.pnPGInstitutions.api.description=PN PG Institution operations
 swagger.onboarding.product.api.description=Product operations
+swagger.onboarding.institutions.api.onboarding.getActiveOnboarding=The service retrieves the active onboarding information for a given tax code and product ID
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.api.onboarding.subunit=The service allows the onboarding of Users to a subunit of an Institution
 swagger.onboarding.institutions.api.onboarding.verifyAggregatesCsv=The service allows to verify if the given csv contains valid aggregate institutions
