--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -9,6 +9,7 @@ swagger.onboarding.institutions.api.onboarding=The service allows the onboarding
 swagger.onboarding.institutions.api.onboarding.subunit=The service allows the onboarding of Users to a subunit of an Institution
 swagger.onboarding.institutions.api.onboarding.verifyAggregatesCsv=The service allows to verify if the given csv contains valid aggregate institutions
 swagger.onboarding.institutions.api.onboarding.checkRecipientCode=The service allows to verify if recipientCode is valid or not
+swagger.onboarding.institutions.api.onboardingUsersPg=The service allows the onboarding of Users to a PG Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service retrieve the institution's geographic taxonomy
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
