[PNPG-263] fix:changed check manager response property response to result

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -158,5 +158,5 @@ swagger.onboarding.institutions.model.additionalInformations.otherNote=Other not
 swagger.onboarding.institutions.model.aggregates=List of Aggregate Institutions, not empty only if isAggregator field's value is True
 swagger.onboarding.institutions.model.isAggregator=specified if given institution is an Aggregator
 
-swagger.user.check-manager.model.response=Is the given user manager of the institution
+swagger.user.check-manager.model.result=Is the given user manager of the institution
 
