--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -46,6 +46,7 @@ swagger.onboarding.institutions.model.vatNumber=Institution's VAT number
 swagger.onboarding.institutions.model.publicServices=Institution's service type
 swagger.onboarding.institutions.model.pricingPlan=Product's pricing plan
 swagger.onboarding.institutions.model.origin=Institution data origin
+swagger.onboarding.institutions.model.gpuData=Institution's GPU data
 swagger.onboarding.institutions.model.institutionType=Institution's type
 swagger.onboarding.institutions.model.userRole=Logged user's role
 swagger.onboarding.institutions.model.pspData=Payment Service Provider (PSP) specific data
