Added api to retrieve attachment by onboarding id

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -122,12 +122,14 @@ swagger.tokens.complete=Complete an onboarding request
 swagger.tokens.completeOnboardingUsers=Complete an onboarding users request
 swagger.tokens.tokenId=Contract's unique identifier
 swagger.tokens.onboardingId=Onboarding's unique identifier
+swagger.tokens.attachmentName=Onboarding's attachment name
 swagger.tokens.productId=Product's unique identifier
 
 swagger.tokens.retrieveOnboardingRequest=Service to retrieve a specific onboarding request
 swagger.tokens.approveOnboardingRequest=Service to approve a specific onboarding request
 swagger.tokens.rejectOnboardingRequest=Service to reject a specific onboarding request
 swagger.tokens.getContract=Service to download a specific onboarding contract
+swagger.tokens.getAttachment=Service to download a specific onboarding attachment
 swagger.tokens.getAggregatesCsv=Service to download a specific onboarding aggregates csv
 
 swagger.onboarding.institutions.model.dpoData=Data Protection Officer (DPO) specific data
