Fixed method swagger

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -1,4 +1,5 @@
 swagger.description=Self Care OnBoarding API documentation
+swagger.version=0.1.0-SNAPSHOT
 swagger.security.schema.bearer.description=A bearer token in the format of a JWS and conformed to the specifications included in [RFC8725](https://tools.ietf.org/html/RFC8725)
 swagger.onboarding.model.userRole=Logged user's role
 swagger.onboarding.institutions.api.description=Institution operations
